--- a/primeira-bateria/styles.css
+++ b/primeira-bateria/styles.css
@@ -1,24 +1,105 @@
 * {
-    /* Não altere nada aqui dentro */
-    font-family: "Poppins", sans-serif;
+  /* Não altere nada aqui dentro */
+  font-family: "Poppins", sans-serif;
 
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-
-body {
-    /* Não altere nada aqui dentro */
-    height: 100vh;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
 :root {
-    /* Não altere nada aqui dentro */
-    --gray: #1D1D1D;
-    --blue: #13E3FF;
-    --white: #FFFFFF;
+  /* Não altere nada aqui dentro */
+  --gray: #1d1d1d;
+  --blue: #13e3ff;
+  --white: #ffffff;
 }
 
-/* Escreva a partir daqui */
+body {
+  /* Não altere nada aqui dentro */
+  height: 100vh;
+  width: 100%;
+
+  background: var(--gray);
+  display: flex;
+}
+
+aside {
+  width: 25%;
+  height: 100%;
+
+  background: var(--blue);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 16px;
+}
+
+.nav-span {
+  font-weight: bold;
+  color: var(--gray);
+  font-size: 16px;
+}
+
+.nav-footer {
+  color: var(--gray);
+  font-size: 16px;
+}
+
+.top-nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  gap: 8px;
+}
+
+main {
+  width: 75%;
+  height: 100%;
+  padding: 16px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+top-main {
+  font-size: 32px;
+  text-align: center;
+  color: var(--blue);
+}
+
+main > h1 {
+  font-size: 48px;
+  color: var(--white);
+  text-wrap: balance;
+  font-weight: bold;
+}
+
+.main-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 8px;
+}
+
+.f {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 8px;
+  background: var(--blue);
+  color: var(--gray);
+  font-size: 16px;
+  font-weight: bold;
+}
